netfly-test form and deploy  corrected

--- a/style.css
+++ b/style.css
@@ -361,6 +361,7 @@ textarea {
   border: none;
   resize: none;
   outline: none;
+  margin-bottom: 1.5rem;
 }
 textarea:focus {
   border: 3px solid lightblue;
