form textarea and footer corrected

--- a/style.css
+++ b/style.css
@@ -361,11 +361,12 @@ textarea {
   border: none;
   resize: none;
   outline: none;
-  margin-bottom: 1.5rem;
-  padding: 4rem;
 }
 textarea:focus {
   border: 3px solid lightblue;
+}
+.field {
+  margin-top: 1rem;
 }
 .form__btn {
   background-color: #fff;
@@ -392,8 +393,10 @@ textarea:focus {
   border-top: 1px solid #fff;
 }
 .footer__block__address {
-  width: 130px;
+  width: 180px;
+  height: 100px;
   margin: 0.5rem;
+  font-size: 1.2rem;
 }
 .footer__block__copyright {
   width: 90%;
