--- a/style.css
+++ b/style.css
@@ -9,10 +9,16 @@
   --box-shadow: #707070 0px 1px 5px;
 }
 
-html {
+html,
+body {
   font-size: 10px;
   font-family: JetBrains;
   scroll-behavior: smooth;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 * {
   padding: 0;
