--- a/style.css
+++ b/style.css
@@ -9,16 +9,10 @@
   --box-shadow: #707070 0px 1px 5px;
 }
 
-html,
-body {
+html {
   font-size: 10px;
   font-family: JetBrains;
   scroll-behavior: smooth;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
 }
 * {
   padding: 0;
@@ -26,7 +20,7 @@ body {
   box-sizing: border-box;
 }
 .wrapper {
-  background: rgb(255, 255, 255);
+  background: rgba(255, 255, 255, 0);
   background: linear-gradient(
     150deg,
     rgba(255, 255, 255, 1) 0%,
