--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
   font-size: 10px;
   font-family: JetBrains;
   scroll-behavior: smooth;
-  min-height: 100vh;
+  min-height: 100%;
 }
 * {
   padding: 0;
@@ -21,6 +21,9 @@ html {
   box-sizing: border-box;
 }
 .wrapper {
+  min-height: 100%;
+  margin: 0;
+  background-size: auto;
   background: rgba(255, 255, 255, 0);
   background: linear-gradient(
     150deg,
