--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ textarea:focus {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 4rem;
+  margin: 4.5rem;
   border-top: 1px solid #fff;
 }
 .footer__block__address {
