--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html {
   min-height: 100%;
   margin: 0;
   background-size: auto;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background: rgba(255, 255, 255, 0);
   background: linear-gradient(
     150deg,
@@ -122,10 +122,15 @@ html {
   display: flex;
   flex-direction: column;
   width: 50%;
+  height: 330px;
   text-align: center;
   margin-top: 10rem;
   justify-content: center;
   text-shadow: var(--text-shadow);
+}
+.hero__block__text :nth-child(3) {
+  align-self: center;
+  margin-top: 5rem;
 }
 .hero__primary__text {
   color: #252ac1;
@@ -150,7 +155,6 @@ html {
   background-color: #fff;
   border-radius: 2rem;
   padding: 1.5rem;
-  margin-top: 8rem;
   text-shadow: var(--text-shadow);
   box-shadow: var(--box-shadow);
 }
@@ -400,11 +404,11 @@ textarea:focus {
 .footer__block__address {
   width: 180px;
   height: 100px;
-  margin: 0.5rem;
+  margin-top: 2.5rem;
   font-size: 1.2rem;
 }
 .footer__block__copyright {
-  width: 90%;
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
